--- a/research/index.htm
+++ b/research/index.htm
@@ -44,7 +44,7 @@
 		<li>
 		<strong>Specification mining for system-on-chip design validation</strong>
 		
-		<p style="font-size:1.3vw; line-height:1.5; margin-top:0.2vw">
+		<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
 		Comprehensive and well-defined specifications are necessary to perform rigorous and thorough validation of 
 		system-on-chip~(SoC) designs. However, in practice such specifications are usually not available, often 
 		ambiguous, incomplete, or even contain errors. Moreover, as a SoC design gradually progresses across design
@@ -56,7 +56,7 @@
 		which can be used in SoC validation and debug.
 		</p>
 		
-		<p style="font-size:1.3vw; line-height:1.5">
+		<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
 			More information about on-going research about this project can be found in our <a href="https://github.com/sees-usf/Spec-mining-top">GitHub repository</a>.
 			<!--ul>
 			<li><strong><a href="https://github.com/sees-usf/SeqMining">Sequential Pattern Mining using Data Mining Techniques</a></strong></li>
@@ -72,15 +72,21 @@
 			<ul>
 			<li>
 			  <strong><a href="https://github.com/sees-usf/ProbMC">Scalable methods for probabilistic model checking</a></strong> 
-				<p style="font-size:1.3vw; line-height:1.5; margin-top:0">
+				<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
 				Recetnly, we received an NSF award to support this project. If you are interested in knowing more about this project, please visit the project page by cliking the project title.
 				</p>
 			</li>
 			<li>
 			   <strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong>
-				<p style="font-size:1.3vw; line-height:1.5; margin-top:0.2vw">
+				<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
 				In this project, we try to address the <strong>state space explosion</strong> problem often encountered during model checking systems of high concurrency. The central idea behind our research is divide-n-conquer, <em>i.e.</em>, verification of an entire system is inferred by results from verification of consisting components. 
 				</p>
+			</li>
+			<li>
+			<strong><a href="https://github.com/sees-usf/SoC-Validation">Post-Silicon Debug for System-on-Chip Designs</a></strong>
+			<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
+			Post-silicon validation is an activity where a pre-production silicon prototype is used for various types of validation. Compared with pre-silicon verification, post-silicon validation executes silicon at the target speed under real operating conditions, therefore, one second of post-silicon execution may require months or years of pre-silicon simulation cycles. As a result, post-silicon validation allows much deeper state space to be explored, thus being able to reveal bugs escaped from pre-silicon verfification. On the other hand, limited observability is a major challenge to effective post-silicon validation as there are only a very limited number of interface pins available for observing internal behavior of a design for efficient debug. In this research, we have been addressing this problem at a higher abstraction level from a system perspective. 
+			</p>
 			</li>
 			</ul>
   	</li>
