--- a/research/index.htm
+++ b/research/index.htm
@@ -38,8 +38,10 @@
   	More details about the project overviews will come soon... </font>
 		<ul>
   	<li>
-		<strong>Autonomous security monitoring and enforcement</strong> --
-		Design HW/SW agents that can detect security anomaly and mitigate attacks with minimal human intervention.
+		<strong>Autonomous security monitoring and enforcement</strong>
+		<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
+		In this research, we consider security of system-on-chip designs where the trust of the consisting blocks cannot be establised.  The objective is to design HW/SW agents embedded in such designs that can detect and mitigate security attacks autonomously or with minimal human intervention.
+		</p>
 		</li>
 		<li>
 		<strong>Specification mining for system-on-chip design validation</strong>
@@ -64,8 +66,13 @@
 			<ul>
 			<li><strong><a href="https://github.com/sees-usf/RNNMining">Sequential Pattern Mining using Recurrent Neural Network</a></strong></li>
 			</ul-->
-		</p>
-			
+		</p>	
+		</li>
+		<li>
+		<strong>Safety and Robustness of Machine Learning</strong>
+		<p style="font-size:1.3vw; line-height:1.5; margin-top:0.1vw">
+		Machine learning can be found in growing number of applications due to its recent advances in performance.  Many of such applicaitons are becoming increasingly autonomous relying on the decisions made by the embedded machine learning components.  At the same time, such applications, self-driving, medical diagnosis, etc, are often safety critical.  The robustness is susceptible to adversarial perturbations, which can affect the safety of the overall systems.  The objective of this research is to develop verification and testing methods to show safety and robustness of machine learning algorithms under perturbations.   
+		</p>	
 		</li>
   	<li>
 		<strong>Testing, verification, and validation of software, hardware, and embedded systems</strong>
