--- a/people/index.htm
+++ b/people/index.htm
@@ -35,14 +35,16 @@
   
   <div class="column">
 		<div class="card">
-    <p style="margin-top:4vw">
+    <p style="margin-top:0">
   	<h2>Faculty Advisor</h2>
   	<ul>
-  		<li>Hao Zheng, PhD</li>
+  		<li>Hao Zheng, PhD, <a href="http://www.cse.usf.edu/~haozheng">bio</a></li>
   	</ul>
   	</p>
-  	
-  	<p style="margin-top:4vw">
+	</div>
+	
+	<div class="card">
+  	<p style="margin-top:0">
   	<h2>Current Students</h2>
   	<ul style="line-height:1.1">
 		  <li>Mohammad Ahmadi, PhD, 2019</li>
@@ -52,8 +54,10 @@
 		  <li>Jana Giovanni, REU, Fall, 2019</li>
   	</ul>
   	</p>
-  	
-    <p style="margin-top:4vw">
+  </div>
+	
+	<div class="card">
+    <p style="margin-top:0">
   	<h2>Graduated Students</h2>
   	<ul style="line-height:1.1">
 			<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
