--- a/people/index.htm
+++ b/people/index.htm
@@ -36,7 +36,7 @@
   <div class="column">
 		<div class="card">
     <p style="margin-top:0">
-  	<h2>Faculty Advisor</h2>
+	<strong style="font-size:1.6vw;">Faculty Advisor</strong><br>
   	<ul>
   		<li>Hao Zheng, PhD, <a href="http://www.cse.usf.edu/~haozheng">bio</a></li>
   	</ul>
@@ -45,7 +45,7 @@
 	
 	<div class="card">
   	<p style="margin-top:0">
-  	<h2>Current Students</h2>
+	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
 		  <li>Mohammad Ahmadi, PhD, 2019</li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
@@ -58,7 +58,7 @@
 	
 	<div class="card">
     <p style="margin-top:0">
-  	<h2>Graduated Students</h2>
+	<strong style="font-size:1.6vw;">Graduated Students</strong><br>
   	<ul style="line-height:1.1">
 			<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
 			</li>
