--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
 	    <strong>embedded systems</strong>, and <strong>verification and testing</strong>.  Currently, we are looking at hardware safety and security assurance 
 		by investigating various design time and runtime methods and techniques, application of machine learning in 
 		design automation, efficient hardware design of machine learning algorithms, and formal verification and 
-		reasoning of hardware and software systems. Please visit our research page for more information
+	    reasoning of hardware and software systems. Please visit our <a href="research">research</a> page for more information
    </p>
    </div> 
 	  
