--- a/people/index.htm
+++ b/people/index.htm
@@ -49,9 +49,9 @@
   	<ul style="line-height:1.1">
 		  <li>Mohammad Ahmadi, PhD, 2019</li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
-		<li>Hernan Palombo, PhD, 2013 <a href="https://www.linkedin.com/in/hernanpalombo">webpage</a></li>
-			<li>Julian De Joseph, REU, Spring 2020</li>
-		  <li>Jana Giovanni, REU, Fall, 2019</li>
+		<li>Laith Abdel-Rahman, REU, Summer 2020</li>
+		<li>Nisa Phelps, REU, Summer 2020</li>
+		<li>Laureano Priffin, REU, Summer 2020</li>
   	</ul>
   	</p>
   </div>
@@ -60,8 +60,9 @@
     <p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Graduated Students</strong><br>
   	<ul style="line-height:1.1">
-			<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
-			</li>
+		<li>Hernan Palombo, PhD, 2020 <a href="https://www.linkedin.com/in/hernanpalombo">webpage</a></li>
+		<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
+		</li>
   		<li>Haiqiong Yao, PhD, 2010</li>
       <li>Yuting Cao, MS, 2015</li>
       <li>Hernan Palombo, MS, 2014</li>
@@ -69,6 +70,8 @@
       <li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
       <li>Emmanual Rodriguez, REU, 2012-2013</li>
+	  <li>Julian De Joseph, REU, Spring 2020</li>
+	  <li>Jana Giovanni, REU, Fall, 2019</li>
   	</ul>
   	</p>
   </div>
