--- a/people/index.htm
+++ b/people/index.htm
@@ -49,9 +49,9 @@
   	<ul style="line-height:1.1">
 		  <li>Mohammad Ahmadi, PhD, 2019</li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
-		<li>Laith Abdel-Rahman, REU, Summer 2020</li>
-		<li>Nisa Phelps, REU, Summer 2020</li>
-		<li>Laureano Priffin, REU, Summer 2020</li>
+		<li>Laith Abdel-Rahman, REU, Summer/Fall 2020</li>
+		<li>Nisa Phelps, REU, Summer/Fall 2020</li>
+		<li>Laureano Priffin, REU, Summer/Fall 2020</li>
   	</ul>
   	</p>
   </div>
