--- a/index.htm
+++ b/index.htm
@@ -88,6 +88,8 @@
   
   <div class="column-right">
 	<img src="images/iot.png" width="100%"> 
+ 	<img src="images/hw-sec.png" width="100%"> 
+ 	<img src="images/at-machine.png" width="100%"> 
   </div>
 </div>
 
