--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,7 @@
   <div class="column-right">
 	<img src="images/iot.png" width="100%"> 
  	<img src="images/hw-sec.png" width="100%"> 
- 	<img src="images/at-machine.png" width="100%"> 
+ 	<img src="images/ai-machine.png" width="100%"> 
   </div>
 </div>
 
