--- a/people/index.htm
+++ b/people/index.htm
@@ -47,11 +47,11 @@
   	<p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
+		  <li>Sefat E Rahman, PhD, 2021 <a href="https://www.linkedin.com/in/sefaterahman/">LinkedIn</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019</li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
-		<li>Laith Abdel-Rahman, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laith-abdel-63266b186/">Linked</a></li>
-		<li>Nisa Phelps, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/nisa-phelps/">Linked</a></li>
-		<li>Laureano Griffin, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laureanogriffin/">Linked</a></li>
+		<li>Laith Abdel-Rahman, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laith-abdel-63266b186/">Linkedin</a></li>
+		<li>Laureano Griffin, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a></li>
   	</ul>
   	</p>
   </div>
@@ -70,6 +70,7 @@
       <li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
       <li>Emmanual Rodriguez, REU, 2012-2013</li>
+	<li>Nisa Phelps, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/nisa-phelps/">Linkedin</a></li>
 	  <li>Julian De Joseph, REU, Spring 2020</li>
 	  <li>Jana Giovanni, REU, Fall, 2019</li>
   	</ul>
