--- a/people/index.htm
+++ b/people/index.htm
@@ -48,7 +48,7 @@
 	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
 		  <li>Sefat E Rahman, PhD, 2021 <a href="https://www.linkedin.com/in/sefaterahman/">LinkedIn</a></li>
-		  <li>Mohammad Ahmadi, PhD, 2019</li>
+		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<li>Laith Abdel-Rahman, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laith-abdel-63266b186/">Linkedin</a></li>
 		<li>Laureano Griffin, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a></li>
