--- a/people/index.htm
+++ b/people/index.htm
@@ -47,11 +47,12 @@
   	<p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
-		  <li>Sefat E Rahman, PhD, 2021 <a href="https://www.linkedin.com/in/sefaterahman/">LinkedIn</a></li>
+		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
-		<li>Juan Melo Vasquez, REU, Summer/Fall 2021 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
-		<li>Luke Moreale, REU, Summer/Fall 2021 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
+		<li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a>
+		<li>Juan Melo Vasquez, REU, Summer/Fall 2021, Spring 2022 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
+		<li>Luke Moreale, REU, Summer/Fall 2021, Spring 2022 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
   	</ul>
   	</p>
   </div>
