--- a/people/index.htm
+++ b/people/index.htm
@@ -47,12 +47,12 @@
   	<p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
+		<li>Luke Moreale, PhD, 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li>		
 		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a>
-		<li>Juan Melo Vasquez, REU, Summer/Fall 2021, Spring 2022 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
-		<li>Luke Moreale, REU, Summer/Fall 2021, Spring 2022 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
+		<li>Adam Mansour, REU, Summer/Fall 2022 <a href="https://www.linkedin.com/in/adam-mansour-269287239/">Linkedin</a></li>
   	</ul>
   	</p>
   </div>
@@ -70,12 +70,17 @@
   		<li>Yingying Zhang, MS, 2010</li>
       <li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
-      <li>Emmanual Rodriguez, REU, 2012-2013</li>
+		<li>Zizhan Zhou, REU, Spring/Summer 2022 <a href="https://www.linkedin.com/in/zizhan-zhou-0004b7177/">Linkedin</a></li>
+		<li>Ameena Mohammed, REU, Summer 2022 <a href="https://www.linkedin.com/in/ameenamohammed/">Linkedin</a></li>
+		<li>Hetvi Shah, REU, Summer 2022 <a href="https://www.linkedin.com/in/hetvi-shah-242a3b220/">Linkedin</a></li>
+		<li>Luke Moreale, REU, Simmer/Fall 2021, Spring 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li>		
+		<li>Juan Melo Vasquez, REU, Summer/Fall 2021, Spring 2022 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
 	<li>Laureano Griffin, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a></li>
 	<li>Laith Abdel-Rahman, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laith-abdel-63266b186/">Linkedin</a></li>
 	<li>Nisa Phelps, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/nisa-phelps/">Linkedin</a></li>
 	  <li>Julian De Joseph, REU, Spring 2020</li>
 	  <li>Jana Giovanni, REU, Fall, 2019</li>
+	<li>Emmanual Rodriguez, REU, 2012-2013</li>
   	</ul>
   	</p>
   </div>
