--- a/people/index.htm
+++ b/people/index.htm
@@ -70,6 +70,7 @@
   		<li>Yingying Zhang, MS, 2010</li>
       <li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
+		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
 		<li>Zizhan Zhou, REU, Spring/Summer 2022 <a href="https://www.linkedin.com/in/zizhan-zhou-0004b7177/">Linkedin</a></li>
 		<li>Ameena Mohammed, REU, Summer 2022 <a href="https://www.linkedin.com/in/ameenamohammed/">Linkedin</a></li>
 		<li>Hetvi Shah, REU, Summer 2022 <a href="https://www.linkedin.com/in/hetvi-shah-242a3b220/">Linkedin</a></li>
