--- a/teach/index.htm
+++ b/teach/index.htm
@@ -36,19 +36,19 @@
 			<tr>
 				<TD width="20%">EEL 6764 </TD> 
 				<TD width="50%"><a href="eel6764/">Principles of Computer Architecture</a></TD> 
-				<td>Fall, 17/18/19; &nbsp Spring, 18</td>
+				<td>Fall 17/18/19/20/21/22/23; &nbsp Spring 18</td>
 			</tr>
 			
 			<tr>
 				<TD width="20%">CIS 4930/EEL 6706 </TD> 
 				<TD width="50%"><a href="psv/">VLSI Testing and Fault Tolerant Design</a></TD> 
-				<td>Spring, 16/19</td>
+				<td>Fall 22; &nbsp Spring 16/19/21</td>
 			</tr>
 			
 			<TR>
 				<TD>CIS 4930/6930</TD> 
 				<TD><a href="PrinciplesCPS/">Principles of Cyber-Physical Systems</a></TD> 
-				<TD> Fall, 19; &nbsp Spring, 14</TD>
+				<TD> Fall 19/21; &nbsp Spring 14</TD>
 			</TR>
 			
 			<tr>
@@ -60,7 +60,7 @@
 			<tr>
 				<td>CIS 4930/6930 </TD> 
 				<TD><a href="soc/">System-on-Chip Design</a></TD> 
-				<td>Spring 2016</td>
+				<td>Spring 16/22</td>
 			</TR>
 
 			<TR>
@@ -78,7 +78,13 @@
 			<TR>
 				<TD>CDA 4253</TD> 
 				<TD><a href="cda4253/">FPGA System Design</a></TD> 
-				<TD> Spring, 10/11/17/19; Fall, 06/08/15; Summer, 16/18</TD>
+				<TD> Spring, 10/11/17/19/21/22; Fall, 06/08/15; Summer, 16/18</TD>
+			</TR>
+	  
+	  		<TR>
+				<TD>CDA 4205</TD> 
+				<TD><a href="cda4253/">Computer Architecture/Lab</a></TD> 
+				<TD> Fall 23</TD>
 			</TR>
 
 <TR>
