--- a/people/index.htm
+++ b/people/index.htm
@@ -47,12 +47,14 @@
   	<p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
+		<li>John Maurer, PhD, 2023 <a href="">---</a></li>		
 		<li>Luke Moreale, PhD, 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li>		
 		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a>
-		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
+		<li>An Pham, REU, Summer 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
+		<li>Elizbeth Sotomayo, REU, Summer 2023 <a href="">---</a></li>
   	</ul>
   	</p>
   </div>
@@ -70,6 +72,7 @@
   		<li>Yingying Zhang, MS, 2010</li>
       <li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
+		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
 		<li>Adam Mansour, REU, Summer/Fall 2022 <a href="https://www.linkedin.com/in/adam-mansour-269287239/">Linkedin</a></li>
 		<li>Zizhan Zhou, REU, Spring/Summer 2022 <a href="https://www.linkedin.com/in/zizhan-zhou-0004b7177/">Linkedin</a></li>
 		<li>Ameena Mohammed, REU, Summer 2022 <a href="https://www.linkedin.com/in/ameenamohammed/">Linkedin</a></li>
