--- a/people/index.htm
+++ b/people/index.htm
@@ -52,9 +52,9 @@
 		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
-		<li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a>
-		<li>An Pham, REU, Summer 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
-		<li>Elizbeth Sotomayo, REU, Summer 2023 <a href="">---</a></li>
+		<!--li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a></li-->
+		<li>An Pham, REU, Summer/Fall 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
+		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023 <a href="">---</a></li>
   	</ul>
   	</p>
   </div>
@@ -67,10 +67,11 @@
 		<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
 		</li>
   		<li>Haiqiong Yao, PhD, 2010</li>
-      <li>Yuting Cao, MS, 2015</li>
-      <li>Hernan Palombo, MS, 2014</li>
+		<li>Laureano Griffin, MS, Fall, 2023 <a href="https://www.linkedin.com/in/laureanogriffin"></a></li>
+      		<li>Yuting Cao, MS, 2015</li>
+     		 <li>Hernan Palombo, MS, 2014</li>
   		<li>Yingying Zhang, MS, 2010</li>
-      <li>Ryan Mabry, MS, 2006</li>
+      		<li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
 		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
 		<li>Adam Mansour, REU, Summer/Fall 2022 <a href="https://www.linkedin.com/in/adam-mansour-269287239/">Linkedin</a></li>
