--- a/people/index.htm
+++ b/people/index.htm
@@ -53,8 +53,9 @@
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<!--li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a></li-->
-		<li>An Pham, REU, Summer/Fall 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
-		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023 <a href="">---</a></li>
+		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023, Spring 2024 <a href="">---</a></li>
+		<li>Trudy Kwok, REU, Spring 2024 <a href="">---</a></li>
+		<li>Niharika Adari, REU, Spring 2024 <a href="">---</a></li>
   	</ul>
   	</p>
   </div>
@@ -73,6 +74,7 @@
   		<li>Yingying Zhang, MS, 2010</li>
       		<li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
+		<li>An Pham, REU, Summer/Fall 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
 		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
 		<li>Adam Mansour, REU, Summer/Fall 2022 <a href="https://www.linkedin.com/in/adam-mansour-269287239/">Linkedin</a></li>
 		<li>Zizhan Zhou, REU, Spring/Summer 2022 <a href="https://www.linkedin.com/in/zizhan-zhou-0004b7177/">Linkedin</a></li>
