--- a/people/index.htm
+++ b/people/index.htm
@@ -51,7 +51,6 @@
 		<li>Luke Moreale, PhD, 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li>		
 		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
-  		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<!--li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a></li-->
 		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023, Spring 2024 <a href="">---</a></li>
 		<li>Trudy Kwok, REU, Spring 2024 <a href="">---</a></li>
@@ -64,7 +63,8 @@
     <p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Graduated Students</strong><br>
   	<ul style="line-height:1.1">
-		<li>Hernan Palombo, PhD, 2020 <a href="https://www.linkedin.com/in/hernanpalombo">webpage</a></li>
+		<li>Md Rubel Ahmed, PhD, 2018--2023 <a href="https://rubelahmed57.github.io/">webpage</a></li>
+		<li>Hernan Palombo, PhD, 2015--2020 <a href="https://www.linkedin.com/in/hernanpalombo">webpage</a></li>
 		<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
 		</li>
   		<li>Haiqiong Yao, PhD, 2010</li>
