--- a/people/index.htm
+++ b/people/index.htm
@@ -52,7 +52,7 @@
 		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
 		<!--li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a></li-->
-		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023, Spring 2024 <a href="">---</a></li>
+		<li>Ghali Omar Boutaib, REU, Summer/Fall 2024<a href=" https://www.linkedin.com/in/ghaliomar/">LinkedIn</a></li>
 		<li>Trudy Kwok, REU, Spring 2024 <a href="">---</a></li>
 		<li>Niharika Adari, REU, Spring 2024 <a href="">---</a></li>
   	</ul>
@@ -74,6 +74,7 @@
   		<li>Yingying Zhang, MS, 2010</li>
       		<li>Ryan Mabry, MS, 2006</li>
 	  	<li>Jared Ahrens, MS, 2006</li>
+		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023, Spring 2024 <a href="">---</a></li>
 		<li>An Pham, REU, Summer/Fall 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
 		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
 		<li>Adam Mansour, REU, Summer/Fall 2022 <a href="https://www.linkedin.com/in/adam-mansour-269287239/">Linkedin</a></li>
