--- a/people/index.htm
+++ b/people/index.htm
@@ -92,6 +92,29 @@
   	</ul>
   	</p>
   </div>
+
+	  <div class="card">
+    <p style="margin-top:0">
+	<strong style="font-size:1.6vw;">Previous REU Students</strong><br>
+  	<ul style="line-height:1.1">
+		<li>Elizbeth Sotomayo, REU, Summer/Fall 2023, Spring 2024 <a href="">---</a></li>
+		<li>An Pham, REU, Summer/Fall 2023 <a href="https://www.linkedin.com/in/anhongpham/">Linkedin</a></li>
+		<li>Sulekha Mukunda, REU, Spring 2023 <a href="https://www.linkedin.com/in/sulekha-mukunda-950514221">Linkedin</a></li>
+		<li>Adam Mansour, REU, Summer/Fall 2022 <a href="https://www.linkedin.com/in/adam-mansour-269287239/">Linkedin</a></li>
+		<li>Zizhan Zhou, REU, Spring/Summer 2022 <a href="https://www.linkedin.com/in/zizhan-zhou-0004b7177/">Linkedin</a></li>
+		<li>Ameena Mohammed, REU, Summer 2022 <a href="https://www.linkedin.com/in/ameenamohammed/">Linkedin</a></li>
+		<li>Hetvi Shah, REU, Summer 2022 <a href="https://www.linkedin.com/in/hetvi-shah-242a3b220/">Linkedin</a></li>
+		<li>Luke Moreale, REU, Simmer/Fall 2021, Spring 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li>		
+		<li>Juan Melo Vasquez, REU, Summer/Fall 2021, Spring 2022 <!--a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a--></li>
+	<li>Laureano Griffin, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laureanogriffin/">Linkedin</a></li>
+	<li>Laith Abdel-Rahman, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/laith-abdel-63266b186/">Linkedin</a></li>
+	<li>Nisa Phelps, REU, Summer/Fall 2020 <a href="https://www.linkedin.com/in/nisa-phelps/">Linkedin</a></li>
+	  <li>Julian De Joseph, REU, Spring 2020</li>
+	  <li>Jana Giovanni, REU, Fall, 2019</li>
+	<li>Emmanual Rodriguez, REU, 2012-2013</li>
+  	</ul>
+  	</p>
+  </div>
 	</div>
 
   <div class="column-right">
