--- a/people/index.htm
+++ b/people/index.htm
@@ -48,12 +48,12 @@
 	<strong style="font-size:1.6vw;">Current Students</strong><br>
   	<ul style="line-height:1.1">
 		<li>John Maurer, PhD, 2023 <a href="">---</a></li>		
-		<li>Luke Moreale, PhD, 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li>		
+		<!--li>Luke Moreale, PhD, 2022 <a href="https://www.linkedin.com/in/luke-morreale-995b81216/">Linkedin</a></li-->		
 		  <li>Bardia Nadimi, PhD, 2022 <a href="https://scholar.google.com/citations?user=kItjfUkAAAAJ&hl=en">Google Scholar</a></li>
 		  <li>Mohammad Ahmadi, PhD, 2019 <a href="https://www.linkedin.com/in/mohammad-ahmadi-ba27a91a3/">LinkedIn</a></li>
 		<!--li>Laureano Griffin, MS, 2022 <a href="https://www.linkedin.com/in/laureanogriffin"></a></li-->
-		<li>Jamie Rafael Imperial, Undergraduate Honor Thesis, Summer/Fall 2024<a href="">---</a></li>
-		<li>Ghali Omar Boutaib, REU, Summer/Fall 2024<a href=" https://www.linkedin.com/in/ghaliomar/">LinkedIn</a></li>
+		<li>Jamie Rafael Imperial, Undergraduate Honor Thesis, Summer/Fall 2024<a href=""> ---</a></li>
+		<li>Ghali Omar Boutaib, REU, Summer/Fall 2024<a href=" https://www.linkedin.com/in/ghaliomar/"> LinkedIn</a></li>
 		<li>Trudy Kwok, REU, Spring 2024 <a href="">---</a></li>
 		<li>Niharika Adari, REU, Spring 2024 <a href="">---</a></li>
   	</ul>
