changed NVIDIA-logo to jpeg

--- a/research/index.htm
+++ b/research/index.htm
@@ -112,7 +112,7 @@
 	<img src="../images/nsf-logo.png" width="80%"> 
 	<img src="../images/intel-logo.png" width="80%"> 
 	<img src="../images/fc2-logo.png" width="80%"> 
-	<img src="../images/NVIDIA-logo.png" width="80%"> 
+	<img src="../images/NVIDIA-logo.jpeg" width="80%"> 
   </div>
 	</div>
 
