Update index.htm -- introduction

--- a/index.htm
+++ b/index.htm
@@ -35,15 +35,14 @@
   <div class="column">
   	<div class="card">
   	<p class="notop">
-  	Increasing computing capability is a key enabler for many emerging applications as 
-  	exemplified by smart healthy, smart city, smart building, smart transportation, autonomous driving, etc.
-  	Functions and services offered by those applications are increasingly enhanced by integrating 
-  	more computer hardware and software code. For example, a typical consumer vehicle sold today 
-  	is typically installed with >10M lines of software code.  The projection is that even more
-  	software will be integrated in the future.  Another trend is that more and more individual devices 
-  	are being connected each day to offer better services, safety, and efficiency.  
-  	We can envision that the entire world is a big connected network of computing devices that
-  	perform diverse tasks.     
+  	Increasing computing capabilities are a key driver behind many emerging applications,
+	such as smart healthcare, smart cities, smart buildings, smart transportation, and autonomous driving. 
+	These applications continue to evolve by integrating more advanced hardware and software. 
+	For instance, a typical consumer vehicle today is equipped with over 10 million lines of software code, 
+	and this number is expected to grow significantly in the future. 
+	Additionally, the number of connected devices is rapidly increasing, enabling improved services, 
+	enhanced safety, and greater efficiency. This trend paints a vision of a world as a vast, 
+	interconnected network of computing devices working together to perform diverse and complex tasks.
   	</p>
   	
   	<p style="line-height:1.5">
